@@ -13,6 +13,7 @@ All:
 All (GUI):
 
 - Added wxXmlResource::Unload()
+- Possibility of modeless wxWizard dialog (with presentation in sample).
 
 wxMSW:
 
